@@ -1,3 +1,9 @@
+TAG: qcreports_db-6-0-22-36
+DATE: 02/28/2023
+STAFF: lec
+wts2-556/fl2-210/Request for additional GO QC report: under-annotated genes (TR13434)
+monthly/GO_Unannotationed.py
+
 TAG: qcreports_db-6-0-22-35
 DATE: 02/22/2023
 STAFF: lec
